--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                             for home & business
                         </p>
                         <div class="circle-line2">
-                            <span class="circle"></span>
+                            <span class="circle2"></span>
                         </div>
                     </div>
                 </div>
